# ocaml-activex

./: activex-jsoo.opam  dune-project
examples/ado/: main.ml
examples/com_api/: dune  tlbinf32.ml
examples/enum/: main.ml
examples/excel/: excel.ml  main.ml
examples/mac/: dune  main.ml
src/: activex.js  com.ml  com.mli  dune
